<resources>
    <string name="app_name">TalkApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint">계정(이메일 또는 전화번호)</string>
    <string name="login_password">비밀번호</string>
    <string name="login_btn">로그인</string>
    <string name="sign_in">회원가입</string>
    <string name="ref_email">이메일</string>
    <string name="ref_name">이름</string>
    <string name="ref_pwd">비밀번호</string>
    <string name="ref_name_hint">홍길동</string>
    <string name="ref_pwd_hint">password</string>
    <string name="ref_email_hint">example@google.com</string>
    <string name="reg_btn">회원가입</string>
    <string name="friend_add_text">이메일을 입력해 친구를 추가해보세요.</string>
</resources>