<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background"
        tools:context=".login.RegisterFragment">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="320dp"
            android:layout_height="53dp"
            android:layout_marginTop="148dp"
            android:ems="10"
            android:hint="@string/ref_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.424"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="320dp"
            android:layout_height="53dp"
            android:layout_marginTop="55dp"
            android:ems="10"
            android:hint="@string/ref_pwd_hint"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/et_name"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toStartOf="@+id/et_name"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:text="@string/reg_btn"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@color/login_button_1"
            app:layout_constraintEnd_toEndOf="@+id/et_pwd"
            app:layout_constraintStart_toStartOf="@+id/et_pwd"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="320dp"
            android:layout_height="53dp"
            android:layout_marginTop="56dp"
            android:hint="@string/ref_name_hint"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/ref_email"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/ref_name"
            app:layout_constraintBottom_toTopOf="@+id/et_name"
            app:layout_constraintStart_toStartOf="@+id/et_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/ref_pwd"
            app:layout_constraintBottom_toTopOf="@+id/et_pwd"
            app:layout_constraintStart_toStartOf="@+id/et_pwd" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>