<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background"
        tools:context=".login.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="222dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_kakao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/login_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_btn"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@color/login_button_1"
            app:layout_constraintEnd_toEndOf="@+id/et_pwd"
            app:layout_constraintStart_toStartOf="@+id/et_pwd"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

        <Button
            android:id="@+id/btn_register0"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>